# cookiecutter-python-module

./: LICENSE  README.org  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.project_slug }}/: .dir-locals.el  .gitignore  dodo.py  eshell-activate  pyproject.toml  test_{{ cookiecutter.main_file }}.py  vulture_allow.txt  {{ cookiecutter.main_file}}.py
