# https://packaging.python.org/en/latest/specifications/pyproject-toml/#pyproject-toml-spec

[project]
name = "{{ cookiecutter.project_slug }}"
dependencies = []

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
fail_under = 70
show_missing = true

[tool.pylint."messages control"]
disable = [
    "invalid-name",
    "line-too-long",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
    "too-many-statements",
    "unspecified-encoding",
    "unused-import",
    "use-implicit-booleaness-not-len",
]

[tool.pylint.typecheck]
ignored-classes = ["PurePath"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", # type annotations
    "COM812", # missing trailing comma
    "D100", # undocumented module
    "D101", # undocumented class
    "D102", # undocumented method
    "D103", # undocumented function
    "D104", # undocumented package
    "D105", # undocumented magic method
    "D106", # undocumented nested class
    "D107", # undocumented init
    "D203", # one blank line before class
    "D213", # multi-line summary second line
    "E501", # line too long
    "FBT001", # boolean positional value positional arg
    "FBT002", # boolean positional value positional arg
    "FBT003", # boolean positional value in call
    "ISC001", # implicit string concatenation on one line
    "PLR2004", # magic value in a comparison
    "PT006", # paramertize-names should be tuple
    "RUF005", # collection literal concatenation
    "RUF007", # prefer itertools.pairwise
    "S101", # use of assert detected
    "S603", # subprocess without shell
    "S607", # process with partial executable path
]
